2004-12-28  jrandom     * Cleaned up the resending and choking algorithm in the streaming lib.     * Removed the read timeout override for I2PTunnel's httpclient, allowing       it to use the default for the streaming lib.     * Revised ack triggers in the streaming lib.     * Logging.
Monotone-Parent: 36fb4f4fcece8d75141c47a33f001ba9b4159387
Monotone-Revision: 86ac5c96814508fe1051a7cf51067295425cd86a

Monotone-Author: jrandom
Monotone-Date: 2004-12-29T15:53:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.117 2004/12/21 11:32:50 jrandom Exp $
+$Id: history.txt,v 1.118 2004/12/21 13:23:03 jrandom Exp $
+
+2004-12-28  jrandom
+    * Cleaned up the resending and choking algorithm in the streaming lib.
+    * Removed the read timeout override for I2PTunnel's httpclient, allowing
+      it to use the default for the streaming lib.
+    * Revised ack triggers in the streaming lib.
+    * Logging.
 
 * 2004-12-21  0.4.2.5 released
 
