2004-12-29  jrandom     * Imported Ragnarok's addressbook source (2.0.2) which is built but not       deployed in the i2pinstall.jar/i2pupdate.zip (yet).     * Don't treat connection inactivity closure as a connection error.
Monotone-Parent: b57817bc778412937c5ed9a26452953c22db8fd4
Monotone-Revision: 2a2b89ff396f979f2c698340f9661f919ad14d95

Monotone-Author: jrandom
Monotone-Date: 2004-12-29T22:16:42
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.119 2004/12/29 10:53:30 jrandom Exp $
+$Id: history.txt,v 1.120 2004/12/29 15:06:43 jrandom Exp $
+
+2004-12-29  jrandom
+    * Imported Ragnarok's addressbook source (2.0.2) which is built but not
+      deployed in the i2pinstall.jar/i2pupdate.zip (yet).
+    * Don't treat connection inactivity closure as a connection error.
 
 2004-12-29  jrandom
     * Add in a new keepalive event on each TCP connection, proactively sending
