2004-12-31  jrandom     * Speling fxi (thanks digum!)     * Bugfix for the I2PTunnel web interface so that it now properly launches       newly added tunnels that are defined to be run on startup (thanks ugha!)
Monotone-Parent: 20693db91458c2fb2726c7af54dc7fcf76e0c34d
Monotone-Revision: 9be9301b489b976c798e23a17a7fc4334d35d2ba

Monotone-Author: jrandom
Monotone-Date: 2004-12-31T17:18:05
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.121 2004/12/29 17:16:42 jrandom Exp $
+$Id: history.txt,v 1.122 2004/12/30 17:51:16 jrandom Exp $
+
+2004-12-31  jrandom
+    * Speling fxi (thanks digum!)
+    * Bugfix for the I2PTunnel web interface so that it now properly launches
+      newly added tunnels that are defined to be run on startup (thanks ugha!)
 
 2004-12-30  jrandom
     * Revised the I2PTunnel client and httpclient connection establishment 
