2004-12-31  ragnarok     * Integrated latest addressbook changes (2.0.3) which include support for       deploying as a .war file with no existing addressbook configuration.     * Updated main build process to bundle the addressbook.war in the       i2pinstall.jar and i2pupdate.zip.
Monotone-Parent: 9be9301b489b976c798e23a17a7fc4334d35d2ba
Monotone-Revision: 8481e331c2a16ecb583cb23a747ed98814932b16

Monotone-Author: jrandom
Monotone-Date: 2005-01-01T00:57:01
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.122 2004/12/30 17:51:16 jrandom Exp $
+$Id: history.txt,v 1.123 2004/12/31 12:18:05 jrandom Exp $
+
+2004-12-31  ragnarok
+    * Integrated latest addressbook changes (2.0.3) which include support for 
+      deploying as a .war file with no existing addressbook configuration.
+    * Updated main build process to bundle the addressbook.war in the 
+      i2pinstall.jar and i2pupdate.zip.
 
 2004-12-31  jrandom
     * Speling fxi (thanks digum!)
