* 2005-01-06  0.4.2.6 released 2005-01-06  jrandom     * Added a startup message to the addressbook, printing its version number       to stdout (which is sent to wrapper.config) when it loads.     * Updated the addressbook to reread the config file periodically     * Added orion.i2p to the list of eepsites on the default homepage
Monotone-Parent: 99e8028f8a8d2f89afe54afefdf9c9ad7bf0a047
Monotone-Revision: ab766aae160250015a2eb17980b1123a3ff59cab

Monotone-Author: jrandom
Monotone-Date: 2005-01-06T20:59:13
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_4_2_6

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.124 2004/12/31 19:57:01 jrandom Exp $
+$Id: history.txt,v 1.125 2005/01/05 19:17:53 jrandom Exp $
+
+* 2005-01-06  0.4.2.6 released
+
+2005-01-06  jrandom
+    * Added a startup message to the addressbook, printing its version number
+      to stdout (which is sent to wrapper.config) when it loads.
+    * Updated the addressbook to reread the config file periodically
+    * Added orion.i2p to the list of eepsites on the default homepage
 
 2005-01-05  jrandom
     * Handle unexpected network read errors more carefully (thanks parg!)
