--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.126 2005/01/06 15:59:13 jrandom Exp $
+$Id: history.txt,v 1.127 2005/01/15 16:03:15 jrandom Exp $
+
+2005-01-15  cervantes
+    * Added support to the eepproxy for URLs such as 
+      http://localhost:4444/eepproxy/foo.i2p/bar/baz or even
+      http://localhost:4444/eepproxy/foo.i2p/?i2paddresshelper=base64
 
 2005-01-15  jrandom
     * Caught a series of (previously unhandled) errors caused by requeueing 
