--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,15 @@
-$Id: history.txt,v 1.127 2005/01/15 16:03:15 jrandom Exp $
+$Id: history.txt,v 1.128 2005/01/15 18:16:13 jrandom Exp $
+
+2005-01-17  jrandom
+    * Added meaningful support for adjusting the preferred message size in the
+      streaming lib by setting the i2p.streaming.maxMessageSize=32768 (or 
+      whatever).  The other side will mimic a reduction (but never an increase).
+    * Always make sure to use distinct ConnectionOption objects for each 
+      connection (duh)
+    * Reduced the default ACK delay to 500ms on in the streaming lib
+    * Only shrink the streaming window once per window
+    * Don't bundle a new jetty.xml with updates
+    * Catch another local routerInfo corruption issue on startup.
 
 2005-01-15  cervantes
     * Added support to the eepproxy for URLs such as 
