--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.128 2005/01/15 18:16:13 jrandom Exp $
+$Id: history.txt,v 1.129 2005/01/17 03:15:00 jrandom Exp $
+
+2005-01-18  jrandom
+    * Increased the max # session tags maintained and decreased slightly the
+      period over which they are gathered.
 
 2005-01-17  jrandom
     * Added meaningful support for adjusting the preferred message size in the
