2005-01-23  smeghead     * Port the java SAM client library to mono/C# and released into the       public domain.  The 0.1 version of this port is available in CVS as       i2p/apps/sam/csharp/src/I2P.SAM.Client.  The other nonfunctional C#       library has been removed.
Monotone-Parent: 86bfe4759a8570de2572a3ef88e0684e5e4542ec
Monotone-Revision: b2a3f9be7d615bd425243a8b7eefc141143d2c58

Monotone-Author: jrandom
Monotone-Date: 2005-01-23T08:22:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.130 2005/01/18 19:08:13 jrandom Exp $
+$Id: history.txt,v 1.131 2005/01/21 20:53:02 jrandom Exp $
+
+2005-01-23  smeghead
+    * Port the java SAM client library to mono/C# and released into the 
+      public domain.  The 0.1 version of this port is available in CVS as
+      i2p/apps/sam/csharp/src/I2P.SAM.Client.  The other nonfunctional C#
+      library has been removed.
 
 2005-01-21  Jhor
     * Updated jbigi build scripts for OSX.
