2005-01-24  smeghead     * C#-ification of sam-sharp: interface greatly simplified using delegates       and events; SamBaseEventHandler provides basic implementation and helper       methods but is now optional.     * NAnt buildfile and README added for sam-sharp.
Monotone-Parent: b2a3f9be7d615bd425243a8b7eefc141143d2c58
Monotone-Revision: 79aadb6167890ae1591c2d06d754daae6c746ae7

Monotone-Author: smeghead
Monotone-Date: 2005-01-24T22:42:05
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.131 2005/01/21 20:53:02 jrandom Exp $
+$Id: history.txt,v 1.132 2005/01/23 03:22:11 jrandom Exp $
+
+2005-01-24  smeghead
+    * C#-ification of sam-sharp: interface greatly simplified using delegates
+      and events; SamBaseEventHandler provides basic implementation and helper
+      methods but is now optional.
+    * NAnt buildfile and README added for sam-sharp.
 
 2005-01-23  smeghead
     * Port the java SAM client library to mono/C# and released into the 
