2005-01-25  smeghead     * Tweaked some classes to enable gcj 3.4.3 to compile the router and       supporting apps (except for the routerconsole which is still being       investigated).
Monotone-Parent: cddb64a024aaf0a79d62c0fa91e1d8f8d9fe8d31
Monotone-Revision: bebc06b53ca73e4f74aec81f96a2f375d2c78280

Monotone-Author: smeghead
Monotone-Date: 2005-01-26T06:29:17
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.132 2005/01/23 03:22:11 jrandom Exp $
+$Id: history.txt,v 1.133 2005/01/24 17:42:05 smeghead Exp $
+
+2005-01-25  smeghead
+    * Tweaked some classes to enable gcj 3.4.3 to compile the router and
+      supporting apps (except for the routerconsole which is still being
+      investigated).
 
 2005-01-24  smeghead
     * C#-ification of sam-sharp: interface greatly simplified using delegates
