2005-02-03  smeghead     * Added Ant buildfile in apps/fortuna for creating a custom Fortuna PRNG jar       library from GNU Crypto's CVS HEAD sources.
Monotone-Parent: 33b89b99f67e7176fb77ecec4194c65977068246
Monotone-Revision: f52dc85f2a5778af975a68332473dcbe07d3bdc3

Monotone-Author: smeghead
Monotone-Date: 2005-02-03T13:39:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.135 2005/01/26 19:21:10 smeghead Exp $
+$Id: history.txt,v 1.136 2005/01/26 23:48:41 smeghead Exp $
+
+2005-02-03  smeghead
+    * Added Ant buildfile in apps/fortuna for creating a custom Fortuna PRNG jar
+      library from GNU Crypto's CVS HEAD sources.
 
 2005-01-26  smeghead
     * i2pProxy.pac, i2pbench.sh, and i2ptest.sh are now shipped with the dist
