--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.138 2005/02/06 17:14:46 jrandom Exp $
+$Id: history.txt,v 1.139 2005/02/07 05:04:23 jrandom Exp $
+
+2005-02-09  duck
+    * Allow an unneeded newline in the SAM client connection without
+      disconnecting.
 
 2005-02-07  jrandom
     * Fixed a race in the streaming lib's delayed flush algorithm (thanks anon!)
