2005-02-17  jrandom     * Included the GPL'ed susimail 0.13 by default (thanks susi23!)
Monotone-Parent: d5e37515d809f26b3ecc2cd87cc750922ab80f7b
Monotone-Revision: b362a823a821be5033ad46deab4a5f2b9ee5ec3e

Monotone-Author: jrandom
Monotone-Date: 2005-02-17T20:55:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.143 2005/02/16 23:08:34 jrandom Exp $
+$Id: history.txt,v 1.144 2005/02/17 12:59:29 jrandom Exp $
+
+2005-02-17  jrandom
+    * Included the GPL'ed susimail 0.13 by default (thanks susi23!)
 
 2005-02-17  jrandom
     * Fixed the braindead tunnel testing logic
