(not yet tagging this 0.5, but I don't think there's anytihng left) 2005-02-17  jrandom     * If the clock is adjusted during a job run, don't act as if the job took       negative time.
Monotone-Parent: b362a823a821be5033ad46deab4a5f2b9ee5ec3e
Monotone-Revision: c050966453198527a94f7e64025845e85a7c1215

Monotone-Author: jrandom
Monotone-Date: 2005-02-17T22:57:53
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.144 2005/02/17 12:59:29 jrandom Exp $
+$Id: history.txt,v 1.145 2005/02/17 15:55:07 jrandom Exp $
+
+2005-02-17  jrandom
+    * If the clock is adjusted during a job run, don't act as if the job took
+      negative time.
 
 2005-02-17  jrandom
     * Included the GPL'ed susimail 0.13 by default (thanks susi23!)
