--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,6 @@
-$Id: history.txt,v 1.145 2005/02/17 15:55:07 jrandom Exp $
+$Id: history.txt,v 1.146 2005/02/17 17:57:53 jrandom Exp $
+
+* 2005-02-18  0.5 released
 
 2005-02-17  jrandom
     * If the clock is adjusted during a job run, don't act as if the job took
