2005-02-19  jrandom     * Only build new extra tunnels on failure if we don't have enough     * Fix a fencepost in the tunnel building so that e.g. a variance of       2 means +/- 2, not +/- 1 (thanks dm!)     * Avoid an NPE on client disconnect     * Never select a shitlisted peer to participate in a tunnel     * Have netDb store messages timeout after 10s, not the full 60s (duh)     * Keep session tags around for a little longer, just in case (grr)     * Cleaned up some closing event issues on the streaming lib     * Stop bundling the jetty 5.1.2 and updated wrapper.config in the update       so that 0.4.* users will need to do a clean install, but we don't need       to shove an additional 2MB in each update to those already on 0.5.     * Imported the susimail css (oops, thanks susi!)
Monotone-Parent: 57d2ec3bfbf27c49d2bb562f6b2343d850ce6559
Monotone-Revision: e131f83c8515a822d6513460eae5fb893f711a15

Monotone-Author: jrandom
Monotone-Date: 2005-02-19T23:20:56
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,18 @@
-$Id: history.txt,v 1.146 2005/02/17 17:57:53 jrandom Exp $
+$Id: history.txt,v 1.147 2005/02/18 10:58:20 jrandom Exp $
+
+2005-02-19  jrandom
+    * Only build new extra tunnels on failure if we don't have enough
+    * Fix a fencepost in the tunnel building so that e.g. a variance of
+      2 means +/- 2, not +/- 1 (thanks dm!)
+    * Avoid an NPE on client disconnect
+    * Never select a shitlisted peer to participate in a tunnel
+    * Have netDb store messages timeout after 10s, not the full 60s (duh)
+    * Keep session tags around for a little longer, just in case (grr)
+    * Cleaned up some closing event issues on the streaming lib
+    * Stop bundling the jetty 5.1.2 and updated wrapper.config in the update
+      so that 0.4.* users will need to do a clean install, but we don't need 
+      to shove an additional 2MB in each update to those already on 0.5.
+    * Imported the susimail css (oops, thanks susi!)
 
 * 2005-02-18  0.5 released
 
