2005-02-20  jrandom     * Only build failsafe tunnels if we need them     * Properly implement the selectNotFailingPeers so that we get a random       selection of peers, rather than using the strictOrdering (thanks dm!)     * Don't include too many "don't tell me about" peer references in the       lookup message - only send the 10 peer references closest to the target.
Monotone-Parent: e131f83c8515a822d6513460eae5fb893f711a15
Monotone-Revision: cc7169c3e88b0399c6775cadd556b1efb986efc9

Monotone-Author: jrandom
Monotone-Date: 2005-02-20T09:12:43
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.147 2005/02/18 10:58:20 jrandom Exp $
+$Id: history.txt,v 1.148 2005/02/19 18:20:58 jrandom Exp $
+
+2005-02-20  jrandom
+    * Only build failsafe tunnels if we need them
+    * Properly implement the selectNotFailingPeers so that we get a random
+      selection of peers, rather than using the strictOrdering (thanks dm!)
+    * Don't include too many "don't tell me about" peer references in the 
+      lookup message - only send the 10 peer references closest to the target.
 
 2005-02-19  jrandom
     * Only build new extra tunnels on failure if we don't have enough
