2005-02-22  jrandom     * Reworked the tunnel (re)building process to remove the tokens and       provide cleaner controls on the tunnels built.     * Fixed situations where the timestamper wanted to test more servers than       were provided (thanks Tracker!)     * Get rid of the dead SAM sessions by using the streaming lib's callbacks       (thanks Tracker!)
Monotone-Parent: f925369825c037afa90638d536da662f96f3273d
Monotone-Revision: 5095faaa60cb7f013d4376421ccde371226789e8

Monotone-Author: jrandom
Monotone-Date: 2005-02-23T04:20:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.151 2005/02/22 02:07:34 jrandom Exp $
+$Id: history.txt,v 1.152 2005/02/22 18:13:00 jrandom Exp $
+
+2005-02-22  jrandom
+    * Reworked the tunnel (re)building process to remove the tokens and 
+      provide cleaner controls on the tunnels built.
+    * Fixed situations where the timestamper wanted to test more servers than
+      were provided (thanks Tracker!)
+    * Get rid of the dead SAM sessions by using the streaming lib's callbacks
+      (thanks Tracker!)
 
 2005-02-22  jrandom
     * Temporary workaround for the I2CP disconnect bug (have the streaminglib
