2005-02-23  jrandom     * Now that we don't get stale SAM sessions, it'd be nice if we didn't       get stale tunnel pools, don't you think?
Monotone-Parent: 4213d1f54ba96209793e6ae01a840a3ce5f64587
Monotone-Revision: 6f9b66eb5ee2ac926ed964d4afb54f30d0f96101

Monotone-Author: jrandom
Monotone-Date: 2005-02-23T21:44:30
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.153 2005/02/22 23:20:29 jrandom Exp $
+$Id: history.txt,v 1.154 2005/02/23 00:00:53 jrandom Exp $
+
+2005-02-23  jrandom 
+    * Now that we don't get stale SAM sessions, it'd be nice if we didn't
+      get stale tunnel pools, don't you think?
 
 * 2005-02-23  0.5.0.1 released
 
