2005-02-24  jrandom     * Cache temporary memory allocation in the DSA's SHA1 impl, and the packet       data in the streaming lib.     * Fixed a streaming lib bug where the connection initiator would fail the       stream if the ACK to their SYN was lost.
Monotone-Parent: 6f9b66eb5ee2ac926ed964d4afb54f30d0f96101
Monotone-Revision: f5b3df8e9c9bf53254f528172fea4e0a35fb63ee

Monotone-Author: jrandom
Monotone-Date: 2005-02-24T18:05:25
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.154 2005/02/23 00:00:53 jrandom Exp $
+$Id: history.txt,v 1.155 2005/02/23 16:44:32 jrandom Exp $
+
+2005-02-24  jrandom
+    * Cache temporary memory allocation in the DSA's SHA1 impl, and the packet
+      data in the streaming lib.
+    * Fixed a streaming lib bug where the connection initiator would fail the
+      stream if the ACK to their SYN was lost.
 
 2005-02-23  jrandom 
     * Now that we don't get stale SAM sessions, it'd be nice if we didn't
