2005-02-26  jrandom     * Further streaming lib caching improvements     * Reduce the minimum RTT (used to calculate retry timeouts), but also       increase the RTT on resends.     * Lower the default message size to 4KB from 16KB to further reduce the       chance of failed fragmentation.     * Extend tunnel rebuild throttling to include fallback rebuilds     * If there are less than 20 routers known, don't drop the last 20 (to help       avoid dropping all peers under catastrophic failures)     * New stats for end to end messages - "client.leaseSetFoundLocally",       "client.leaseSetFoundRemoteTime", and "client.leaseSetFailedRemoteTime"
Monotone-Parent: ac94076bea2f2f374fd65fda50904305ebd485ee
Monotone-Revision: 953ecc1ce77a4274c8fc5422ded16798f5ea595d

Monotone-Author: jrandom
Monotone-Date: 2005-02-26T19:16:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,16 @@
-$Id: history.txt,v 1.156 2005/02/24 13:05:26 jrandom Exp $
+$Id: history.txt,v 1.157 2005/02/24 18:53:35 jrandom Exp $
+
+2005-02-26  jrandom
+    * Further streaming lib caching improvements
+    * Reduce the minimum RTT (used to calculate retry timeouts), but also 
+      increase the RTT on resends.
+    * Lower the default message size to 4KB from 16KB to further reduce the
+      chance of failed fragmentation.
+    * Extend tunnel rebuild throttling to include fallback rebuilds
+    * If there are less than 20 routers known, don't drop the last 20 (to help
+      avoid dropping all peers under catastrophic failures)
+    * New stats for end to end messages - "client.leaseSetFoundLocally",
+      "client.leaseSetFoundRemoteTime", and "client.leaseSetFailedRemoteTime"
 
 2005-02-24  jrandom
     * Throttle the number of tunnel rebuilds per minute, preventing CPU 
